workspace-sf/force-app/main/default/objects/ControleUtilizacaoGarantiaContrato__c/ControleUtilizacaoGarantiaContrato__c.object-meta.xml
<CustomObject>
    <description>Conta corrente das garantias do Contrato</description>
    <label>Controle utilização garantia do contrato</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Controle Utilização da Garantia Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Controle utilização garantias contratos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>