workspace-sf/force-app/main/default/objects/ControleUtilizacaoGarantiaContrato__c/fields/Contratado__c.field-meta.xml
<CustomField>
    <fullName>Contratado__c</fullName>
    <label>Contratado</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>