workspace-sf/force-app/main/default/objects/ControleUtilizacaoGarantiaContrato__c/fields/GarantiaSeguradoContrato__c.field-meta.xml
<CustomField>
    <fullName>GarantiaSeguradoContrato__c</fullName>
    <label>Garantia do segurado do contrato</label>
    <referenceTo>GarantiaSeguradoContrato__c</referenceTo>
    <relationshipLabel>Controle utilização garantias contratos</relationshipLabel>
    <relationshipName>ControleUtilizaGarantiaContrato</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>