workspace-sf/force-app/main/default/objects/ControleUtilizacaoGarantiaContrato__c/fields/NumeroCaso__c.field-meta.xml
<CustomField>
    <fullName>NumeroCaso__c</fullName>
    <label>Número do Caso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>