workspace-sf/force-app/main/default/objects/ControleUtilizacaoGarantiaContrato__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentual</fullName>
            </value>
            <value>
                <fullName>Monetario</fullName>
                <label>Monetário</label>
            </value>
            <value>
                <fullName>Dias</fullName>
            </value>
            <value>
                <fullName>ServicoPrestado</fullName>
                <label>Serviço Prestado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>