workspace-sf/force-app/main/default/objects/ControleUtilizacaoGarantiaContrato__c/fields/Utilizado__c.field-meta.xml
<CustomField>
    <fullName>Utilizado__c</fullName>
    <label>Utilizado</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>